Task: solve heatmap's classification problem.
Tried: sort values from highest to lowest, then classify into 4 colors.

Problem: most of the values are value 0.

Tried to solve problem: avoid 0, do the classification from 1 to maxVal.

Problem: the limits are too low, there's too many numbers from 0 to 10.

TO-DO: Think another way of sorting values!

--- a/css/app.css
+++ b/css/app.css
@@ -458,7 +458,7 @@ td {
   background-color: #e94020;
 }
 .tdOrangeLight {
-  background-color: #dd9b88;
+  background-color: #f39f91;
 }
 .tdRedLight {
   background-color: #f5e3df;
